<resources>
    <string name="app_name">EasyCalc</string>
    <string name="action_settings">Settings</string>
    <string name="Uno">1</string>
    <string name="Dos">2</string>
    <string name="Tres">3</string>
    <string name="Cuatro">4</string>
    <string name="Cinco">5</string>
    <string name="Seis">6</string>
    <string name="Siete">7</string>
    <string name="Ocho">8</string>
    <string name="Nueve">9</string>
    <string name="Cero">0</string>
    <string name="Igual">=</string>
    <string name="Punto">.</string>
    <string name="Por">x</string>
    <string name="Suma">+</string>
    <string name="Resta">-</string>
    <string name="Division">÷</string>
    <string name="Clear">CE</string>
</resources>
